@@ -1,43 +1,0 @@
-/*
- * Copyright 2010 Proofpoint, Inc.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-package io.airlift.bootstrap;
-
-import javax.annotation.PostConstruct;
-import javax.annotation.PreDestroy;
-
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-
-/**
- * Extend this class to get run-in-thread behavior
- */
-public abstract class Executed
-        implements Runnable
-{
-    private final ExecutorService executor = Executors.newSingleThreadExecutor();
-
-    @PostConstruct
-    public void startExecution()
-    {
-        executor.submit(this);
-    }
-
-    @PreDestroy
-    public void stopExecution()
-    {
-        executor.shutdownNow();
-    }
-}
